# TinyWings

./: .clang-format  .gitignore  CMakeLists.txt  ReleaseNotes.txt
assets/shader/: map.fs
include/: EllipticFunction.hpp  Function.hpp  Functions.hpp  HyperbolicFunction.hpp  Map.hpp  Player.hpp  PolyFunction.hpp  Rectangle.hpp  SinusFunction.hpp  common.hpp
libraries/ImGui/: imgui_draw.cpp
libraries/rlImGui/: rlImGui.cpp  rlImGui.h
src/: Function.cpp  Map.cpp  Player.cpp  Rectangle.cpp  main.cpp
